# RecLightOnAir

./: .gitignore  CMakeLists.txt  JUCE
.github/workflows/: windows-build.yml
OnAirFirmware/: OnAirFirmware.ino
OnAirLinkFirmware/: CMakeLists.txt  build_firmware.sh  flash_esp.sh  link_diagnose.sh  sdkconfig.defaults
OnAirLinkFirmware/main/: CMakeLists.txt  config.h  idf_component.yml  lamp_control.cpp  lamp_control.h  main.cpp  oled.cpp  oled.h
OnAirLinkFirmware/tools/: FlashRecLight.command  flash_gui.py
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RecLightBLEHelper.mm  RecLightBLEProtocol.h  RecLightBluetoothBridge.cpp  RecLightBluetoothBridge.h  RecLightBluetoothBridge.mm
installer/: build_installer.sh
installer/resources/: conclusion.html  welcome.html
installer/windows/: RecLight.iss
